# MultiAgentPlanning

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  analysis_summary.txt  baseline.py  baseline.sh  baseline_test.ipynb  benchmark.py  benchmark.sh  blocksworld_gen.py  bootstrap.py  config.json  evaluate.py  evaluate.sh  evaluate_pddl.py  evaluate_pddl_hb.py  evaluate_vanilla.py  experiment.ipynb  experiments.sh  graph_interface.ipynb  main.py  main_package_delivery.py  main_static_agents_vault.py  main_static_blocks_world.py  main_static_single_agent_blocks_world.py  main_static_three_switches_room.py  main_static_two_agents_blocks_world.py  natural_plan.py  output.sas  plan.py  plan.sh  plan_benchmark.py  plan_benchmark.sh  plan_benchmark_verify.py  plan_benchmark_verify.sh  plan_single.py  playground.ipynb  plot.ipynb  plot_gpt.ipynb  (+11 more)
data_gen/: blocksworld_gen.py  hanoi_gen.py
debug/: load_environment.ipynb  load_problem.ipynb  main_static_agents_vault.ipynb  main_static_blocks_world.ipynb
docs/: pull_request_template.md
results/: cost_comparison.json
script/: evaluate.sh  plan.sh
test/: load_environment.ipynb  load_problem.ipynb  test_parser_pddl.py  test_universal_validator.py
tmp/: README.md  domain.pddl  domain_exp_0_visibility_True.pddl  domain_exp_11_visibility_False.pddl  domain_exp_16_visibility_True.pddl  domain_exp_19_visibility_False.pddl  domain_exp_22_visibility_True.pddl  domain_exp_23_visibility_False.pddl  domain_exp_25_visibility_False.pddl  domain_exp_27_visibility_False.pddl  domain_exp_28_visibility_True.pddl  logs.txt  sas_plan  (+19 more)
(+36735 files in other folders)
