[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MultiAgentPlanning"
version = "0.1"
authors = [
  { name="Emanuele La Malfa"},
  { name="Ping Zhu"}
]
description = "Multi agent PDDL planning framework"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.hatch.build.targets.wheel]
packages = ["my_package"]

[project.urls]
Homepage = "https://github.com/EmanueleLM/MultiAgentPlanning"
Issues = "https://github.com/EmanueleLM/MultiAgentPlanning/issues"