[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "MultiAgentPlanning"
version = "0.1"
authors = [
  { name="Emanuele La Malfa"},
  { name="Ping Zhu"}
]
description = "Multi agent PDDL planning framework"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_plan"]

[tool.hatch.build.targets.sdist]
include = ["src/llm_plan", "README.md", "pyproject.toml"]

[project.urls]
Homepage = "https://github.com/EmanueleLM/MultiAgentPlanning"
Issues = "https://github.com/EmanueleLM/MultiAgentPlanning/issues"

[tool.mypy]
check_untyped_defs = true